<resources>
    <string name="app_name">UbiBike</string>
    <string name="google_app_id">UbiBike</string>
    <string name="pointsText">Points</string>
    <string name="CurrentTripText">Current Stats</string>
    <string name="HistoryButton">History</string>
    <string name="BookBikeButton">Book Bike</string>
    <string name="SendPointsButton">Send Points</string>
    <string name="historyTitle">History</string>
    <string name="messagesTitle">Messages</string>
    <string name="MessagesButton">Messages</string>
    <string name="newMessageToButton">To:</string>
    <string name="receiverHint">receiver</string>
    <string name="messageBodyHint">Start typing&#8230;</string>
    <string name="newMessageSend">Send</string>
    <string name="peopleNearTitle">People Near You</string>
    <string name="newMessageButton">New +</string>
    <string name="trackMeButton">Most Recent Trajectory</string>
    <string name="logoutButton">Logout</string>
    <string name="sendPointsHolder">Your points :</string>
    <string name="sendPointsHolder2">Points to send :</string>
    <string name="sendPointsSelectReceiverButton">Select Receiver</string>
    <string name="sendPointsSendButton">Send</string>
    <string name="usernameLoginError">Please enter your name.</string>
    <string name="passwordLoginError">Please enter your password.</string>
    <string name="onGpsConnectionFailed">Please turn on your gps.</string>
    <string name="onGpsConnectionSuspended">The gps is unavailable.</string>
    <string name="onGpsConnected"> </string>
    <string name="onDataDisconnected">Please enable your wifi.</string>
    <string name="onDataConnected"> </string>
    <string name="trackingIntent">pt.ulisboa.tecnico.cmov.ubibike.tracking</string>
    <string name="invalidUsernameError">Username does not exist. Please sign up to create new account.</string>
    <string name="invalidPasswordError">Please enter valid password.</string>
    <string name="userAlreadyExistsError">Username already exist. Please login into existing account.</string>
    <string name="invalidState">Debug: invalid state</string>
    <string name="technicalFailure">The server is down. Apologies for inconvenience.</string>
    <string name="port">10001</string>
    <string name="connectButton">Connect</string>
    <string name="disconnectButton">Disconnect</string>
    <string name="serviceButton">WiFi On</string>
    <string name="cancelButton">WiFi Off</string>
    <string name="inRangeButton">In Range</string>
    <string name="inGroupButton">In Network</string>
    <string name="connectionLogin">Connecting&#8230;</string>
</resources>
