<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/newMessageTopLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/newMessageToButton"
            android:id="@+id/peopleNearTitle"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:gravity="center"
            android:id="@+id/receiverEditText" />
    </LinearLayout>

    <include android:id="@+id/header" layout ="@layout/connect_disconnect"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:id="@+id/peopleNearList"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/HistoryMessages"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/messageBodyHint"
        android:id="@+id/newMessageBody"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newMessageSend"
        android:id="@+id/newMessageButtonSend"
        android:layout_gravity="center_horizontal" />


</LinearLayout>
